fix blockquote + float and image spacing

--- a/app/assets/styles/base.css
+++ b/app/assets/styles/base.css
@@ -6,6 +6,8 @@
 @layer base {
   .article-image {
     box-shadow: var(--ui-shadow);
+    margin-top: 1em;
+    margin-bottom: 1rem;
   }
 
   .image-legend {
